# SegmentTree

./: CMakeLists.txt  README.md  main.cpp
include/: SegmentTree.h
src/: SegmentTree.cpp
